--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="85dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/crawlingImg"
-        android:layout_width="70dp"
+        android:layout_width="85dp"
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/crawlingLine"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:layout_width="0dp"
@@ -29,15 +29,6 @@
         android:textSize="15sp"
         android:text="text"/>
 
-    <View
-        android:id="@+id/crawlingLine"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#cccccccc"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crawlingImg"/>
 
 
 
