2022-10-26 1. TabLayout 추가 -> 실시간 리스트 & 보관 리스트 2. 위젯코드 제거

--- a/app/src/main/res/menu/popupmenu.xml
+++ b/app/src/main/res/menu/popupmenu.xml
@@ -6,4 +6,9 @@
         android:title="공유하기"
         android:icon="@drawable/share"/>
 
+    <item
+        android:id="@+id/pop_save"
+        android:title="보관하기"
+        android:icon="@drawable/save"/>
+
 </menu>
