--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -42,7 +43,7 @@
         android:textSize="14sp"
         android:textAllCaps="false"
         android:textColor="@color/primaryColor"
-        android:text="Version 1.0.1\n https://github.com/tekken5953/WebCrollingExample.git"
+        android:text="@string/bottom_label"
         android:gravity="center_horizontal"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
