--- a/app/src/main/res/layout/live_list_item.xml
+++ b/app/src/main/res/layout/live_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="85dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,9 +11,9 @@
         android:layout_width="85dp"
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="0dp"
@@ -28,8 +29,5 @@
         android:textColor="@color/primaryColor"
         android:textSize="15sp"
         android:text="text"/>
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
