--- a/app/src/main/res/layout/book_mark.xml
+++ b/app/src/main/res/layout/book_mark.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/bookTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="보관함"
         android:textStyle="bold"
@@ -18,8 +18,20 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/bookNothingTx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/bookTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="보관하신 뉴스가 없습니다"
+        android:textSize="16sp"
+        android:textAllCaps="false"
+        android:textColor="@color/primaryColor"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/bookSwipe"
@@ -37,8 +49,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:scrollbars="vertical"
+            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/book_list_item" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
