--- a/app/src/main/res/layout/live_list_item.xml
+++ b/app/src/main/res/layout/live_list_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/crawlingImg"
         android:layout_width="85dp"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/app_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
